load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/buchgr/bazel-remote",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buchgr/bazel-remote",
    visibility = ["//visibility:private"],
    deps = ["//cache:go_default_library"],
)

go_binary(
    name = "bazel-remote",
    embed = [":go_default_library"],
    goos = "linux",
    importpath = "github.com/buchgr/bazel-remote",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

cc_image(
    name = "image",
    binary = ":bazel-remote",
    importpath = "github.com/buchgr/bazel-remote",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

container_bundle(
    name = "bundle",
    images = {
        "buchgr/bazel-remote-cache:latest": "//:image",
    },
)
